--- a/IjkplayerXamarin/Sample/Sample.csproj
+++ b/IjkplayerXamarin/Sample/Sample.csproj
@@ -25,8 +25,6 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
-    <MtouchSdkVersion>
-    </MtouchSdkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -70,12 +68,9 @@
     <Reference Include="Xamarin.iOS" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Ijkplayer.iOS">
-      <Version>0.8.8.9</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <Reference Include="IJKPlayer.iOS">
+      <HintPath>..\Ijkplayer.iOS\bin\Release\IJKPlayer.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
